# src/api/deduction-requests/ehr-message-received-controller.js
@@ -2,19 +2,23 @@ import {
   getDeductionRequestByConversationId,
   updateDeductionRequestStatus
 } from '../../services/database/deduction-request-repository';
-import { param } from 'express-validator';
+import { param, body } from 'express-validator';
 import { checkEHRComplete } from '../../services/ehrRepo/ehr-details-request';
 import { Status } from '../../models/deduction-request';
 import { updateLogEvent, updateLogEventWithError } from '../../middleware/logging';
 import { sendHealthRecordAcknowledgement } from '../../services/gp2gp/health-record-acknowledgement';
 
 export const ehrMessageReceivedValidationRules = [
-  param('conversationId').isUUID('4').withMessage("'conversationId' provided is not of type UUIDv4")
+  param('conversationId')
+    .isUUID('4')
+    .withMessage("'conversationId' provided is not of type UUIDv4"),
+  body('messageId').isUUID('4').withMessage("'messageId' provided is not of type UUIDv4")
 ];
 
 export const ehrMessageReceived = async (req, res) => {
   try {
     const { conversationId } = req.params;
+    const { messageId } = req.body;
     const deductionRequest = await getDeductionRequestByConversationId(conversationId);
     if (deductionRequest === null) {
       res.sendStatus(404);
@@ -26,7 +30,8 @@ export const ehrMessageReceived = async (req, res) => {
       await sendHealthRecordAcknowledgement(
         deductionRequest.nhsNumber,
         conversationId,
-        deductionRequest.odsCode
+        deductionRequest.odsCode,
+        messageId
       );
       updateLogEvent({ status: 'Ehr request received and acknowledgement sent' });
     }
